fix:hero:textAlign

--- a/src/components/hero/styles.module.css
+++ b/src/components/hero/styles.module.css
@@ -70,12 +70,14 @@
   border-radius: 10px;
   text-transform: uppercase;
   font-family: 'Times New Roman', Times, serif;
+  text-align: center;
 }
 .slogan{
   user-select: none;
   font-size: 1.5rem;
   font-weight: 400;
   color: goldenrod;
+  text-align: center;
 }
 @media screen and (max-width: 770px) {
   .titleCover{
